// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RelatableViews RelatableView displays bodyMessage if no rows 1`] = `
<div>
  <div
    class="sc-cfxfcM dYFBNW"
  >
    <div
      class="sc-fMMURN bGytvG"
    >
      (no changes, no records)
    </div>
  </div>
</div>
`;

exports[`RelatableViews RelatableView does not crash if key is empty string 1`] = `
<div>
  <div
    class="sc-gdyeKB iSdndE"
  >
    <div
      class="sc-eZYNyq jCpBhD relatable"
    >
      <table
        class="sc-kbousE cbxZca relatable__table "
        role="table"
      >
        <thead
          class="sc-sLsrZ khEWKV"
        >
          <tr
            class="sc-fifgRP gkhDDJ relatable__table-row relatable__table-header-row"
            role="row"
          >
            <th
              class="sc-bDumWk oBdtv relatable__table-cell relatable__table-header-cell relatable__table-header-actions-cell"
            >
              <span
                class="relatable__table-row-actions"
              />
            </th>
            <th
              class="sc-bDumWk iusakN relatable__table-cell relatable__table-header-cell"
              colspan="1"
              role="columnheader"
            >
              \`\`
            </th>
          </tr>
        </thead>
        <tbody
          class="sc-dBmzty cAQsXh"
        >
          <tr
            class="sc-fifgRP gkhDDJ relatable__table-row relatable__table-body-row "
            role="row"
          >
            <td
              class="sc-dkmUuB bIVaUv relatable__table-cell relatable__table-body-cell relatable__table-row-actions-cell"
            >
              <span
                class="sc-fTFjTM hEZFja relatable__table-row-number"
              >
                1
              </span>
              <span
                class="relatable__table-row-actions"
              />
            </td>
            <td
              class="sc-dkmUuB bIVaUv relatable__table-cell relatable__table-body-cell"
              role="cell"
            >
              <span
                class="sc-dSIIpw cWvqxZ"
                title="Click to copy"
              >
                <span
                  class="sc-bDpDS vVhPJ"
                >
                  "String value"
                </span>
                <span
                  class="copy-icon"
                >
                  <span
                    class="sc-aXZVg emfEUm"
                    title="Copy to clipboard"
                  >
                    <svg
                      aria-hidden="true"
                      data-slot="icon"
                      fill="none"
                      height="14"
                      stroke="currentColor"
                      stroke-width="1.5"
                      viewBox="0 0 24 24"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15.75 17.25v3.375c0 .621-.504 1.125-1.125 1.125h-9.75a1.125 1.125 0 0 1-1.125-1.125V7.875c0-.621.504-1.125 1.125-1.125H6.75a9.06 9.06 0 0 1 1.5.124m7.5 10.376h3.375c.621 0 1.125-.504 1.125-1.125V11.25c0-4.46-3.243-8.161-7.5-8.876a9.06 9.06 0 0 0-1.5-.124H9.375c-.621 0-1.125.504-1.125 1.125v3.5m7.5 10.375H9.375a1.125 1.125 0 0 1-1.125-1.125v-9.25m12 6.625v-1.875a3.375 3.375 0 0 0-3.375-3.375h-1.5a1.125 1.125 0 0 1-1.125-1.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H9.75"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                  </span>
                </span>
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`RelatableViews RelatableView does not display bodyMessage if rows, and escapes HTML 1`] = `
<div>
  <div
    class="sc-gdyeKB iSdndE"
  >
    <div
      class="sc-eZYNyq jCpBhD relatable"
    >
      <table
        class="sc-kbousE cbxZca relatable__table "
        role="table"
      >
        <thead
          class="sc-sLsrZ khEWKV"
        >
          <tr
            class="sc-fifgRP gkhDDJ relatable__table-row relatable__table-header-row"
            role="row"
          >
            <th
              class="sc-bDumWk oBdtv relatable__table-cell relatable__table-header-cell relatable__table-header-actions-cell"
            >
              <span
                class="relatable__table-row-actions"
              />
            </th>
            <th
              class="sc-bDumWk iusakN relatable__table-cell relatable__table-header-cell"
              colspan="1"
              role="columnheader"
            >
              x
            </th>
          </tr>
        </thead>
        <tbody
          class="sc-dBmzty cAQsXh"
        >
          <tr
            class="sc-fifgRP gkhDDJ relatable__table-row relatable__table-body-row "
            role="row"
          >
            <td
              class="sc-dkmUuB bIVaUv relatable__table-cell relatable__table-body-cell relatable__table-row-actions-cell"
            >
              <span
                class="sc-fTFjTM hEZFja relatable__table-row-number"
              >
                1
              </span>
              <span
                class="relatable__table-row-actions"
              />
            </td>
            <td
              class="sc-dkmUuB bIVaUv relatable__table-cell relatable__table-body-cell"
              role="cell"
            >
              <span
                class="sc-dSIIpw cWvqxZ"
                title="Click to copy"
              >
                <span
                  class="sc-bDpDS vVhPJ"
                >
                  "String with HTML &lt;strong&gt;in&lt;/strong&gt; it"
                </span>
                <span
                  class="copy-icon"
                >
                  <span
                    class="sc-aXZVg emfEUm"
                    title="Copy to clipboard"
                  >
                    <svg
                      aria-hidden="true"
                      data-slot="icon"
                      fill="none"
                      height="14"
                      stroke="currentColor"
                      stroke-width="1.5"
                      viewBox="0 0 24 24"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15.75 17.25v3.375c0 .621-.504 1.125-1.125 1.125h-9.75a1.125 1.125 0 0 1-1.125-1.125V7.875c0-.621.504-1.125 1.125-1.125H6.75a9.06 9.06 0 0 1 1.5.124m7.5 10.376h3.375c.621 0 1.125-.504 1.125-1.125V11.25c0-4.46-3.243-8.161-7.5-8.876a9.06 9.06 0 0 0-1.5-.124H9.375c-.621 0-1.125.504-1.125 1.125v3.5m7.5 10.375H9.375a1.125 1.125 0 0 1-1.125-1.125v-9.25m12 6.625v-1.875a3.375 3.375 0 0 0-3.375-3.375h-1.5a1.125 1.125 0 0 1-1.125-1.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H9.75"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                  </span>
                </span>
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`RelatableViews TableStatusbar displays no statusBarMessage 1`] = `
<div>
  <div
    class="sc-cfxfcM dYFBNW"
  />
</div>
`;

exports[`RelatableViews TableStatusbar displays statusBarMessage 1`] = `
<div>
  <div
    class="sc-cfxfcM dYFBNW"
  >
    <div
      class="sc-fMMURN bGytvG"
    >
      <span>
        Started streaming 1 records after 5 ms and completed after 10  ms.
      </span>
    </div>
  </div>
</div>
`;
